crates/toon-schema/tests/compile_fail/array_below_min.stderr
error: example 1 field 'items' has 0 items, which violates range [1:]
 --> tests/compile_fail/array_below_min.rs:6:8
  |
6 | struct ArrayBelowMin {
  |        ^^^^^^^^^^^^^
